--- a/content/publication/trappolini-2021-shape/cite.bib
+++ b/content/publication/trappolini-2021-shape/cite.bib
@@ -1,14 +1,15 @@
-@misc{trappolini2021shape,
- abstract = {In this paper, we propose a transformer-based procedure for the efficient registration of non-rigid 3D point clouds. The proposed approach is data-driven and adopts for the first time the transformer architecture in the registration task. Our method is general and applies to different settings. Given a fixed template with some desired properties (e.g. skinning weights or other animation cues), we can register raw acquired data to it, thereby transferring all the template properties to the input geometry. Alternatively, given a pair of shapes, our method can register the first onto the second (or vice-versa), obtaining a high-quality dense correspondence between the two. In both contexts, the quality of our results enables us to target real applications such as texture transfer and shape interpolation. Furthermore, we also show that including an estimation of the underlying density of the surface eases the learning process. By exploiting the potential of this architecture, we can train our model requiring only a sparse set of ground truth correspondences (10∼20% of the total points). The proposed model and the analysis that we perform pave the way for future exploration of transformer-based architectures for registration and matching applications. Qualitative and quantitative evaluations demonstrate that our pipeline outperforms state-of-the-art methods for deformable and unordered 3D data registration on different datasets and scenarios.},
- archiveprefix = {arXiv},
- author = {Giovanni Trappolini and Luca Cosmo and Luca Moschella and Riccardo Marin and Simone Melzi and Emanuele Rodolà},
- author+an = {3=highlight},
- eprint = {2106.13679},
- eprinttype = {arxiv},
- primaryclass = {cs.CV},
- title = {Shape registration in the time of transformers},
- year = {2021},
- url = {https://arxiv.org/abs/2106.13679},
- urldata = {2021-07-01}
+@inproceedings{trappolini2021shape,
+  title     = {Shape Registration in the Time of Transformers},
+  author    = {Giovanni Trappolini and Luca Cosmo and Luca Moschella and Riccardo Marin and Simone Melzi and Emanuele Rodol{\`a}},
+  booktitle = {Thirty-Fifth Conference on Neural Information Processing Systems},
+  year      = {2021},
+  url       = {https://openreview.net/forum?id=ui4xChWcA4R},
+  abstract  = {In this paper, we propose a transformer-based procedure for the efficient registration of non-rigid 3D point clouds. The proposed approach is data-driven and adopts for the first time the transformers architecture in the registration task.
+               Our method is general and applies to different settings. Given a fixed template with some desired properties (e.g. skinning weights or other animation cues), we can register raw acquired data to it, thereby transferring all the template properties to the input geometry.
+               Alternatively, given a pair of shapes, our method can register the first onto the second (or vice-versa), obtaining a high-quality dense correspondence between the two.
+               In both contexts, the quality of our results enables us to target real applications such as texture transfer and shape interpolation.
+               Furthermore, we also show that including an estimation of the underlying density of the surface eases the learning process. By exploiting the potential of this architecture, we can train our model requiring only a sparse set of ground truth correspondences ( of the total points).
+               The proposed model and the analysis that we perform pave the way for future exploration of transformer-based architectures for registration and matching applications. Qualitative and quantitative evaluations demonstrate that our pipeline outperforms state-of-the-art methods for deformable and unordered 3D data registration on different datasets and scenarios.},
+  keywords  = {reviewed},
+  author+an = {3=highlight}
 }
-
