--- a/content/publication/moschella-spectral-unions-partial-2021/cite.bib
+++ b/content/publication/moschella-spectral-unions-partial-2021/cite.bib
@@ -1,15 +1,10 @@
-@online{moschellaSpectralUnionsPartial2021,
- abstract = {Spectral geometric methods have brought revolutionary changes to the field of geometry processing -- however, when the data to be processed exhibits severe partiality, such methods fail to generalize. As a result, there exists a big performance gap between methods dealing with complete shapes, and methods that address missing geometry. In this paper, we propose a possible way to fill this gap. We introduce the first method to compute compositions of non-rigidly deforming shapes, without requiring to solve first for a dense correspondence between the given partial shapes. We do so by operating in a purely spectral domain, where we define a union operation between short sequences of eigenvalues. Working with eigenvalues allows to deal with unknown correspondence, different sampling, and different discretization (point clouds and meshes alike), making this operation especially robust and general. Our approach is data-driven, and can generalize to isometric and non-isometric deformations of the surface, as long as these stay within the same semantic class (e.g., human bodies), as well as to partiality artifacts not seen at training time.},
- archiveprefix = {arXiv},
- author = {Moschella, Luca and Melzi, Simone and Cosmo, Luca and Maggioli, Filippo and Litany, Or and Ovsjanikov, Maks and Guibas, Leonidas and Rodolà, Emanuele},
- author+an = {1=highlight},
- date = {2021-03-31},
- eprint = {2104.00514},
- eprinttype = {arxiv},
- keywords = {Computer Science - Computational Geometry,Computer Science - Graphics,Computer Science - Machine Learning},
- primaryclass = {cs},
- title = {Spectral Unions of Partial Deformable 3D Shapes},
- url = {http://arxiv.org/abs/2104.00514},
- urldate = {2021-04-02}
+@article {moschellaSpectralUnionsPartial2021,
+journal = {Computer Graphics Forum},
+title = {{Learning Spectral Unions of Partial Deformable 3D Shapes}},
+author = {Moschella, Luca and Melzi, Simone and Cosmo, Luca and Maggioli, Filippo and Litany, Or and Ovsjanikov, Maks and Guibas, Leonidas and Rodolà, Emanuele},
+author+an = {1=highlight},
+year = {2022},
+publisher = {The Eurographics Association and John Wiley & Sons Ltd.},
+ISSN = {1467-8659},
+DOI = {10.1111/cgf.14483}
 }
-
