Format paper bibtex

--- a/content/publication/norelli-explanatory-learning-2022/cite.bib
+++ b/content/publication/norelli-explanatory-learning-2022/cite.bib
@@ -1,12 +1,6 @@
 @article{norelliExplanatoryLearning2022,
   archiveprefix = {arXiv},
-  author        = {Antonio Norelli and
-                   Giorgio Mariani and
-                   Luca Moschella and
-                   Andrea Santilli and
-                   Giambattista Parascandolo and
-                   Simone Melzi and
-                   Emanuele Rodolà},
+  author        = {Antonio Norelli and Giorgio Mariani and Luca Moschella and Andrea Santilli and Giambattista Parascandolo and Simone Melzi and Emanuele Rodolà},
   author+an     = {3=highlight},
   eprint        = {2201.10222},
   eprinttype    = {arXiv},
